[package]
name = "pldm-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nom = "7.1"
itertools = "0.10"
chrono = "0.4"
enumset = "1.1"
argh = "0.1"
uuid = { version = "1.3", features = ["v1"] }
anyhow = "1.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
